[package]
name = "csvprof"
version = "0.1.0"
edition = "2021"
description = "Streaming CSV profiling CLI with bounded-memory statistics"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
